--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -37,6 +37,10 @@
     "updateAvailable": "Update Available",
     "noReleases": "No Releases",
     "updatesAndReleases": "Updates & Releases",
+    "newVersionAvailable": "A new version ({{version}}) is available.",
+    "failedToFetchUpdateInfo": "Failed to fetch update information",
+    "preRelease": "Pre-release",
+    "noReleasesFound": "No releases found.",
     "yourBackupCodes": "Your Backup Codes",
     "sendResetCode": "Send Reset Code",
     "verifyCode": "Verify Code",
@@ -93,7 +97,16 @@
     "help": "Help",
     "about": "About",
     "language": "Language",
-    "autoDetect": "Auto-detect"
+    "autoDetect": "Auto-detect",
+    "changeAccountPassword": "Change your account password",
+    "enterSixDigitCode": "Enter the 6-digit code from the docker container logs for user:",
+    "enterNewPassword": "Enter your new password for user:",
+    "passwordsDoNotMatch": "Passwords do not match",
+    "passwordMinLength": "Password must be at least 6 characters long",
+    "passwordResetSuccess": "Password reset successfully! You can now log in with your new password.",
+    "failedToInitiatePasswordReset": "Failed to initiate password reset",
+    "failedToVerifyResetCode": "Failed to verify reset code",
+    "failedToCompletePasswordReset": "Failed to complete password reset"
   },
   "nav": {
     "home": "Home",
@@ -151,7 +164,23 @@
     "adding": "Adding...",
     "currentAdmins": "Current Admins",
     "adminBadge": "Admin",
-    "removeAdminButton": "Remove Admin"
+    "removeAdminButton": "Remove Admin",
+    "general": "General",
+    "userRegistration": "User Registration",
+    "allowNewAccountRegistration": "Allow new account registration",
+    "missingRequiredFields": "Missing required fields: {{fields}}",
+    "oidcConfigurationUpdated": "OIDC configuration updated successfully!",
+    "failedToUpdateOidcConfig": "Failed to update OIDC configuration",
+    "enterUsernameToMakeAdmin": "Enter username to make admin",
+    "userIsNowAdmin": "User {{username}} is now an admin",
+    "failedToMakeUserAdmin": "Failed to make user admin",
+    "removeAdminStatus": "Remove admin status from {{username}}?",
+    "adminStatusRemoved": "Admin status removed from {{username}}",
+    "failedToRemoveAdminStatus": "Failed to remove admin status",
+    "deleteUser": "Delete user {{username}}? This cannot be undone.",
+    "userDeletedSuccessfully": "User {{username}} deleted successfully",
+    "failedToDeleteUser": "Failed to delete user",
+    "overrideUserInfoUrl": "Override User Info URL (not required)"
   },
   "hosts": {
     "title": "Host Manager",
@@ -269,7 +298,30 @@
     "gatewayPorts": "GatewayPorts yes (bind remote ports)",
     "allowTcpForwarding": "AllowTcpForwarding yes (port forwarding)",
     "permitRootLogin": "PermitRootLogin yes (if using root)",
-    "editSshConfig": "Edit /etc/ssh/sshd_config and restart SSH: sudo systemctl restart sshd"
+    "editSshConfig": "Edit /etc/ssh/sshd_config and restart SSH: sudo systemctl restart sshd",
+    "updateHost": "Update Host",
+    "hostUpdatedSuccessfully": "Host \"{{name}}\" updated successfully!",
+    "hostAddedSuccessfully": "Host \"{{name}}\" added successfully!",
+    "hostDeletedSuccessfully": "Host \"{{name}}\" deleted successfully!",
+    "failedToSaveHost": "Failed to save host. Please try again.",
+    "autoDetect": "Auto-detect",
+    "rsa": "RSA",
+    "ed25519": "ED25519",
+    "ecdsaNistP256": "ECDSA NIST P-256",
+    "ecdsaNistP384": "ECDSA NIST P-384",
+    "ecdsaNistP521": "ECDSA NIST P-521",
+    "dsa": "DSA",
+    "rsaSha2256": "RSA SHA2-256",
+    "rsaSha2512": "RSA SHA2-512",
+    "updateKey": "Update Key",
+    "addTagsSpaceToAdd": "add tags (space to add)",
+    "terminalBadge": "Terminal",
+    "tunnelBadge": "Tunnel",
+    "fileManagerBadge": "File Manager",
+    "general": "General",
+    "terminal": "Terminal",
+    "tunnel": "Tunnel",
+    "fileManager": "File Manager"
   },
   "terminal": {
     "title": "Terminal",
