--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -37,6 +37,10 @@
     "updateAvailable": "有可用更新",
     "noReleases": "没有发布版本",
     "updatesAndReleases": "更新与发布",
+    "newVersionAvailable": "有新版本 ({{version}}) 可用。",
+    "failedToFetchUpdateInfo": "获取更新信息失败",
+    "preRelease": "预发布版本",
+    "noReleasesFound": "未找到发布版本。",
     "yourBackupCodes": "您的备份代码",
     "sendResetCode": "发送重置代码",
     "verifyCode": "验证代码",
@@ -93,7 +97,16 @@
     "help": "帮助",
     "about": "关于",
     "language": "语言",
-    "autoDetect": "自动检测"
+    "autoDetect": "自动检测",
+    "changeAccountPassword": "修改您的账户密码",
+    "enterSixDigitCode": "输入来自 docker 容器日志中用户的 6 位数代码：",
+    "enterNewPassword": "为用户输入新密码：",
+    "passwordsDoNotMatch": "密码不匹配",
+    "passwordMinLength": "密码长度至少为 6 个字符",
+    "passwordResetSuccess": "密码重置成功！您现在可以使用新密码登录。",
+    "failedToInitiatePasswordReset": "启动密码重置失败",
+    "failedToVerifyResetCode": "验证重置代码失败",
+    "failedToCompletePasswordReset": "完成密码重置失败"
   },
   "nav": {
     "home": "首页",
@@ -151,7 +164,23 @@
     "adding": "添加中...",
     "currentAdmins": "当前管理员",
     "adminBadge": "管理员",
-    "removeAdminButton": "移除管理员"
+    "removeAdminButton": "移除管理员",
+    "general": "常规",
+    "userRegistration": "用户注册",
+    "allowNewAccountRegistration": "允许新账户注册",
+    "missingRequiredFields": "缺少必填字段：{{fields}}",
+    "oidcConfigurationUpdated": "OIDC 配置更新成功！",
+    "failedToUpdateOidcConfig": "更新 OIDC 配置失败",
+    "enterUsernameToMakeAdmin": "输入用户名以设为管理员",
+    "userIsNowAdmin": "用户 {{username}} 现在是管理员",
+    "failedToMakeUserAdmin": "设为管理员失败",
+    "removeAdminStatus": "移除 {{username}} 的管理员权限吗？",
+    "adminStatusRemoved": "已移除 {{username}} 的管理员权限",
+    "failedToRemoveAdminStatus": "移除管理员权限失败",
+    "deleteUser": "删除用户 {{username}} 吗？此操作无法撤销。",
+    "userDeletedSuccessfully": "用户 {{username}} 删除成功",
+    "failedToDeleteUser": "删除用户失败",
+    "overrideUserInfoUrl": "覆盖用户信息 URL（非必填）"
   },
   "hosts": {
     "title": "主机管理",
@@ -269,7 +298,30 @@
     "gatewayPorts": "GatewayPorts yes（绑定远程端口）",
     "allowTcpForwarding": "AllowTcpForwarding yes（端口转发）",
     "permitRootLogin": "PermitRootLogin yes（如果使用 root）",
-    "editSshConfig": "编辑 /etc/ssh/sshd_config 并重启 SSH: sudo systemctl restart sshd"
+    "editSshConfig": "编辑 /etc/ssh/sshd_config 并重启 SSH: sudo systemctl restart sshd",
+    "updateHost": "更新主机",
+    "hostUpdatedSuccessfully": "主机 \"{{name}}\" 更新成功！",
+    "hostAddedSuccessfully": "主机 \"{{name}}\" 添加成功！",
+    "hostDeletedSuccessfully": "主机 \"{{name}}\" 删除成功！",
+    "failedToSaveHost": "保存主机失败，请重试。",
+    "autoDetect": "自动检测",
+    "rsa": "RSA",
+    "ed25519": "ED25519",
+    "ecdsaNistP256": "ECDSA NIST P-256",
+    "ecdsaNistP384": "ECDSA NIST P-384",
+    "ecdsaNistP521": "ECDSA NIST P-521",
+    "dsa": "DSA",
+    "rsaSha2256": "RSA SHA2-256",
+    "rsaSha2512": "RSA SHA2-512",
+    "updateKey": "更新密钥",
+    "addTagsSpaceToAdd": "添加标签（空格添加）",
+    "terminalBadge": "终端",
+    "tunnelBadge": "隧道",
+    "fileManagerBadge": "文件管理器",
+    "general": "常规",
+    "terminal": "终端",
+    "tunnel": "隧道",
+    "fileManager": "文件管理器"
   },
   "terminal": {
     "title": "终端",
