--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -212,73 +212,57 @@
     "organization": "Organization",
     "ipAddress": "IP Address",
     "port": "Port",
-    "hostName": "Host Name",
-    "folder": "Folder",
-    "tags": "Tags",
-    "passwordRequired": "Password is required when using password authentication",
-    "sshKeyRequired": "SSH Private Key is required when using key authentication",
-    "keyTypeRequired": "Key Type is required when using key authentication",
-    "addHost": "Add Host",
-    "editHost": "Edit Host",
-    "deleteHost": "Delete Host",
-    "hostName": "Host Name",
-    "ipAddress": "IP Address",
-    "port": "Port",
-    "authType": "Authentication Type",
-    "passwordAuth": "Password",
-    "keyAuth": "SSH Key",
-    "keyPassword": "Key Password",
-    "keyType": "Key Type",
+    "name": "Name",
+    "username": "Username",
     "folder": "Folder",
     "tags": "Tags",
     "pin": "Pin",
+    "passwordRequired": "Password is required when using password authentication",
+    "sshKeyRequired": "SSH Private Key is required when using key authentication",
+    "keyTypeRequired": "Key Type is required when using key authentication",
+    "mustSelectValidSshConfig": "Must select a valid SSH configuration from the list",
+    "addHost": "Add Host",
+    "editHost": "Edit Host",
+    "updateHost": "Update Host",
+    "hostUpdatedSuccessfully": "Host \"{{name}}\" updated successfully!",
+    "hostAddedSuccessfully": "Host \"{{name}}\" added successfully!",
+    "hostDeletedSuccessfully": "Host \"{{name}}\" deleted successfully!",
+    "failedToSaveHost": "Failed to save host. Please try again.",
     "enableTerminal": "Enable Terminal",
+    "enableTerminalDesc": "Enable/disable host visibility in Terminal tab",
     "enableTunnel": "Enable Tunnel",
+    "enableTunnelDesc": "Enable/disable host visibility in Tunnel tab",
     "enableFileManager": "Enable File Manager",
+    "enableFileManagerDesc": "Enable/disable host visibility in File Manager tab",
     "defaultPath": "Default Path",
-    "testConnection": "Test Connection",
-    "connect": "Connect",
-    "disconnect": "Disconnect",
-    "connected": "Connected",
-    "disconnected": "Disconnected",
-    "connecting": "Connecting...",
-    "connectionFailed": "Connection Failed",
-    "connectionSuccess": "Connection Successful",
-    "connectionDetails": "Connection Details",
-    "organization": "Organization",
-    "addTags": "Add tags (space to add)",
-    "sourcePort": "Source Port",
-    "endpointPort": "Endpoint Port",
-    "retryInterval": "Retry Interval (seconds)",
+    "defaultPathDesc": "Default directory when opening file manager for this host",
+    "tunnelConnections": "Tunnel Connections",
     "connection": "Connection",
     "remove": "Remove",
-    "addConnection": "Add Connection",
-    "sshpassRequired": "Sshpass Required For Password Authentication",
-    "sshpassInstallCommand": "Install Command: sudo apt install sshpass",
-    "sshServerConfig": "SSH Server Configuration Required",
-    "sshServerConfigInstructions": "Run the following commands to allow password authentication:",
-    "sshConfigCommand1": "sudo sed -i 's/#PasswordAuthentication yes/PasswordAuthentication yes/' /etc/ssh/sshd_config",
-    "sshConfigCommand2": "sudo systemctl restart sshd",
-    "localPortForwarding": "Local Port Forwarding",
-    "localPortForwardingDesc": "Forward a local port to a remote server through the SSH connection",
-    "remotePortForwarding": "Remote Port Forwarding",
-    "remotePortForwardingDesc": "Forward a remote port to a local server through the SSH connection",
-    "dynamicPortForwarding": "Dynamic Port Forwarding (SOCKS Proxy)",
-    "dynamicPortForwardingDesc": "Create a SOCKS proxy on the local machine to route traffic through the SSH connection",
-    "bindAddress": "Bind Address",
-    "hostViewer": "Host Viewer",
-    "configuration": "Configuration",
-    "maxRetries": "Max Retries",
-    "tunnelConnections": "Tunnel Connections",
-    "enableTerminalDesc": "Enable/disable host visibility in Terminal tab",
-    "enableTunnelDesc": "Enable/disable host visibility in Tunnel tab",
-    "enableFileManagerDesc": "Enable/disable host visibility in File Manager tab",
-    "autoStartDesc": "Automatically start this tunnel when the container launches",
-    "defaultPathDesc": "Default directory when opening file manager for this host",
+    "sourcePort": "Source Port",
+    "sourcePortDesc": " (Source refers to the Current Connection Details in the General tab)",
+    "endpointPort": "Endpoint Port",
+    "endpointSshConfig": "Endpoint SSH Configuration",
     "tunnelForwardDescription": "This tunnel will forward traffic from port {{sourcePort}} on the source machine (current connection details in general tab) to port {{endpointPort}} on the endpoint machine.",
-    "endpointSshConfiguration": "Endpoint SSH Configuration",
-    "sourcePortDescription": "(Source refers to the Current Connection Details in the General tab)",
+    "maxRetries": "Max Retries",
+    "maxRetriesDescription": "Maximum number of retry attempts for tunnel connection.",
+    "retryInterval": "Retry Interval (seconds)",
+    "retryIntervalDescription": "Time to wait between retry attempts.",
     "autoStartContainer": "Auto Start on Container Launch",
+    "autoStartDesc": "Automatically start this tunnel when the container launches",
+    "addConnection": "Add Tunnel Connection",
+    "sshpassRequired": "Sshpass Required For Password Authentication",
+    "sshpassRequiredDesc": "For password authentication in tunnels, sshpass must be installed on the system.",
+    "otherInstallMethods": "Other installation methods:",
+    "centosRhelFedora": "CentOS/RHEL/Fedora",
+    "macos": "macOS",
+    "windows": "Windows",
+    "sshServerConfigRequired": "SSH Server Configuration Required",
+    "sshServerConfigDesc": "For tunnel connections, the SSH server must be configured to allow port forwarding:",
+    "gatewayPortsYes": "to bind remote ports to all interfaces",
+    "allowTcpForwardingYes": "to enable port forwarding",
+    "permitRootLoginYes": "if using root user for tunneling",
+    "editSshConfig": "Edit /etc/ssh/sshd_config and restart SSH: sudo systemctl restart sshd",
     "upload": "Upload",
     "authentication": "Authentication",
     "password": "Password",
@@ -286,24 +270,6 @@
     "sshPrivateKey": "SSH Private Key",
     "keyPassword": "Key Password",
     "keyType": "Key Type",
-    "maxRetriesDescription": "Maximum number of retry attempts for tunnel connection.",
-    "retryIntervalDescription": "Time to wait between retry attempts.",
-    "otherInstallMethods": "Other installation methods:",
-    "sshpassOSInstructions": {
-      "centos": "CentOS/RHEL/Fedora: sudo yum install sshpass or sudo dnf install sshpass",
-      "macos": "macOS: brew install hudochenkov/sshpass/sshpass",
-      "windows": "Windows: Use WSL or consider SSH key authentication"
-    },
-    "sshServerConfigReverse": "For reverse SSH tunnels, the endpoint SSH server must allow:",
-    "gatewayPorts": "GatewayPorts yes (bind remote ports)",
-    "allowTcpForwarding": "AllowTcpForwarding yes (port forwarding)",
-    "permitRootLogin": "PermitRootLogin yes (if using root)",
-    "editSshConfig": "Edit /etc/ssh/sshd_config and restart SSH: sudo systemctl restart sshd",
-    "updateHost": "Update Host",
-    "hostUpdatedSuccessfully": "Host \"{{name}}\" updated successfully!",
-    "hostAddedSuccessfully": "Host \"{{name}}\" added successfully!",
-    "hostDeletedSuccessfully": "Host \"{{name}}\" deleted successfully!",
-    "failedToSaveHost": "Failed to save host. Please try again.",
     "autoDetect": "Auto-detect",
     "rsa": "RSA",
     "ed25519": "ED25519",
@@ -321,7 +287,8 @@
     "general": "General",
     "terminal": "Terminal",
     "tunnel": "Tunnel",
-    "fileManager": "File Manager"
+    "fileManager": "File Manager",
+    "hostViewer": "Host Viewer"
   },
   "terminal": {
     "title": "Terminal",
