--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -212,12 +212,14 @@
     "organization": "组织",
     "ipAddress": "IP 地址",
     "port": "端口",
-    "hostName": "主机名",
+    "name": "名称",
+    "username": "用户名",
     "folder": "文件夹",
     "tags": "标签",
     "passwordRequired": "使用密码认证时需要密码",
     "sshKeyRequired": "使用密钥认证时需要 SSH 私钥",
     "keyTypeRequired": "使用密钥认证时需要密钥类型",
+    "mustSelectValidSshConfig": "必须从列表中选择有效的 SSH 配置",
     "addHost": "添加主机",
     "editHost": "编辑主机",
     "deleteHost": "删除主机",
@@ -248,7 +250,9 @@
     "organization": "组织管理",
     "addTags": "添加标签（空格添加）",
     "sourcePort": "源端口",
+    "sourcePortDesc": "（源指通用标签页中的当前连接详情）",
     "endpointPort": "目标端口",
+    "endpointSshConfig": "目标 SSH 配置",
     "retryInterval": "重试间隔（秒）",
     "connection": "连接",
     "remove": "移除",
