feat(profile): display version number from .env in profile menu

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -72,6 +72,7 @@
     "register": "Register",
     "username": "Username",
     "password": "Password",
+    "version" : "Version",
     "confirmPassword": "Confirm Password",
     "back": "Back",
     "email": "Email",
