Integrate credentials manager with host authentication system
- Add credential selection tab to Host Manager editor
- Create CredentialSelector component for credential selection
- Update form validation to support credential-based authentication
- Extend SSH host interfaces with credentialId field
- Add internationalization support for credential authentication
- Fix OIDC config endpoint to return 200 with null data instead of 404
- Improve credentials UI spacing and color consistency
- Remove hardcoded colors and use Zinc theme throughout

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -131,6 +131,7 @@
     "loading": "Loading",
     "required": "Required",
     "optional": "Optional",
+    "clear": "Clear",
     "toggleSidebar": "Toggle Sidebar",
     "sidebar": "Sidebar",
     "home": "Home",
@@ -376,6 +377,10 @@
     "authentication": "Authentication",
     "password": "Password",
     "key": "Key",
+    "credential": "Credential",
+    "selectCredential": "Select Credential",
+    "selectCredentialPlaceholder": "Choose a credential...",
+    "credentialRequired": "Credential is required when using credential authentication",
     "sshPrivateKey": "SSH Private Key",
     "keyPassword": "Key Password",
     "keyType": "Key Type",
