--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -131,6 +131,7 @@
     "loading": "加载中",
     "required": "必填",
     "optional": "可选",
+    "clear": "清除",
     "toggleSidebar": "切换侧边栏",
     "sidebar": "侧边栏",
     "home": "首页",
@@ -397,6 +398,10 @@
     "authentication": "认证方式",
     "password": "密码",
     "key": "密钥",
+    "credential": "凭证",
+    "selectCredential": "选择凭证",
+    "selectCredentialPlaceholder": "选择一个凭证...",
+    "credentialRequired": "使用凭证认证时需要选择凭证",
     "sshPrivateKey": "SSH 私钥",
     "keyPassword": "密钥密码",
     "keyType": "密钥类型",
