feat(profile): display version number from .env in profile menu (#182)
* feat(profile): display version number from .env in profile menu

* Update version checking process

---------

Co-authored-by: LukeGus <bugattiguy527@gmail.com>

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -199,6 +199,7 @@
     "register": "Register",
     "username": "Username",
     "password": "Password",
+    "version" : "Version",
     "confirmPassword": "Confirm Password",
     "back": "Back",
     "email": "Email",
