Remove encrpytion, improve logging and merge interfaces.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -310,7 +310,9 @@
     "allowNewAccountRegistration": "Allow new account registration",
     "missingRequiredFields": "Missing required fields: {{fields}}",
     "oidcConfigurationUpdated": "OIDC configuration updated successfully!",
+    "oidcConfigurationDisabled": "OIDC configuration disabled successfully!",
     "failedToUpdateOidcConfig": "Failed to update OIDC configuration",
+    "failedToDisableOidcConfig": "Failed to disable OIDC configuration",
     "enterUsernameToMakeAdmin": "Enter username to make admin",
     "userIsNowAdmin": "User {{username}} is now an admin",
     "failedToMakeUserAdmin": "Failed to make user admin",
