--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -309,7 +309,9 @@
     "allowNewAccountRegistration": "允许新账户注册",
     "missingRequiredFields": "缺少必填字段：{{fields}}",
     "oidcConfigurationUpdated": "OIDC 配置更新成功！",
+    "oidcConfigurationDisabled": "OIDC 配置禁用成功！",
     "failedToUpdateOidcConfig": "更新 OIDC 配置失败",
+    "failedToDisableOidcConfig": "禁用 OIDC 配置失败",
     "enterUsernameToMakeAdmin": "输入用户名以设为管理员",
     "userIsNowAdmin": "用户 {{username}} 现在是管理员",
     "failedToMakeUserAdmin": "设为管理员失败",
