feat: Added option to paste private key

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -425,6 +425,8 @@
     "dsa": "DSA",
     "rsaSha2256": "RSA SHA2-256",
     "rsaSha2512": "RSA SHA2-512",
+    "uploadFile": "Upload File",
+    "pasteKey": "Paste Key",
     "updateKey": "Update Key",
     "addTagsSpaceToAdd": "add tags (space to add)",
     "terminalBadge": "Terminal",
@@ -809,6 +811,7 @@
     "folder": "folder",
     "password": "password",
     "keyPassword": "key password",
+    "pastePrivateKey": "Paste your private key here...",
     "credentialName": "My SSH Server",
     "description": "SSH credential description",
     "searchCredentials": "Search credentials by name, username, or tags...",
