--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -463,6 +463,8 @@
     "dsa": "DSA",
     "rsaSha2256": "RSA SHA2-256",
     "rsaSha2512": "RSA SHA2-512",
+    "uploadFile": "上传文件",
+    "pasteKey": "粘贴密钥",
     "updateKey": "更新密钥",
     "addTagsSpaceToAdd": "添加标签（空格添加）",
     "terminalBadge": "终端",
@@ -849,6 +851,7 @@
     "description": "SSH凭据描述",
     "searchCredentials": "按名称、用户名或标签搜索凭据...",
     "keyPassword": "密钥密码",
+    "pastePrivateKey": "在此粘贴您的私钥...",
     "sshConfig": "端点 SSH 配置",
     "homePath": "/home",
     "clientId": "您的客户端 ID",
