Improve logging frontend/backend, fix host form being reversed.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
   "credentials": {
-    "credentialsManager": "Credentials Manager",
+    "credentialsViewer": "Credentials Viewer",
     "manageYourSSHCredentials": "Manage your SSH credentials securely",
     "addCredential": "Add Credential",
     "createCredential": "Create Credential",
