Improve logging more, fix credentials sync issues, migrate more to be toasts

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -37,7 +37,7 @@
     "loadingCredentials": "Loading credentials...",
     "retry": "Retry",
     "noCredentials": "No Credentials",
-    "noCredentialsMessage": "Start by creating your first SSH credential",
+    "noCredentialsMessage": "You haven't added any credentials yet. Click \"Add Credential\" to get started.",
     "sshCredentials": "SSH Credentials",
     "credentialsCount": "{{count}} credentials",
     "refresh": "Refresh",
@@ -123,7 +123,14 @@
     "editCredentialDescription": "Update the credential information",
     "listView": "List",
     "folderView": "Folders",
-    "unknown": "Unknown"
+    "unknown": "Unknown",
+    "confirmRemoveFromFolder": "Are you sure you want to remove \"{{name}}\" from folder \"{{folder}}\"? The credential will be moved to \"Uncategorized\".",
+    "removedFromFolder": "Credential \"{{name}}\" removed from folder successfully",
+    "failedToRemoveFromFolder": "Failed to remove credential from folder",
+    "folderRenamed": "Folder \"{{oldName}}\" renamed to \"{{newName}}\" successfully",
+    "failedToRenameFolder": "Failed to rename folder",
+    "movedToFolder": "Credential \"{{name}}\" moved to \"{{folder}}\" successfully",
+    "failedToMoveToFolder": "Failed to move credential to folder"
   },
   "sshTools": {
     "title": "SSH Tools",
@@ -310,6 +317,8 @@
     "allowNewAccountRegistration": "Allow new account registration",
     "missingRequiredFields": "Missing required fields: {{fields}}",
     "oidcConfigurationUpdated": "OIDC configuration updated successfully!",
+    "failedToFetchOidcConfig": "Failed to fetch OIDC configuration",
+    "failedToFetchRegistrationStatus": "Failed to fetch registration status",
     "oidcConfigurationDisabled": "OIDC configuration disabled successfully!",
     "failedToUpdateOidcConfig": "Failed to update OIDC configuration",
     "failedToDisableOidcConfig": "Failed to disable OIDC configuration",
@@ -340,6 +349,8 @@
     "importJsonDesc": "Upload a JSON file to bulk import multiple SSH hosts (max 100).",
     "downloadSample": "Download Sample",
     "formatGuide": "Format Guide",
+    "exportCredentialWarning": "Warning: Host \"{{name}}\" uses credential authentication. The exported file will not include the credential data and will need to be manually reconfigured after import. Do you want to continue?",
+    "exportSensitiveDataWarning": "Warning: Host \"{{name}}\" contains sensitive authentication data (password/SSH key). The exported file will not include this data for security reasons. You'll need to reconfigure authentication after import. Do you want to continue?",
     "uncategorized": "Uncategorized",
     "confirmDelete": "Are you sure you want to delete \"{{name}}\" ?",
     "failedToDeleteHost": "Failed to delete host",
@@ -413,6 +424,7 @@
     "selectCredential": "Select Credential",
     "selectCredentialPlaceholder": "Choose a credential...",
     "credentialRequired": "Credential is required when using credential authentication",
+    "credentialDescription": "Selecting a credential will overwrite the current username and use the credential's authentication details.",
     "sshPrivateKey": "SSH Private Key",
     "keyPassword": "Key Password",
     "keyType": "Key Type",
@@ -428,6 +440,8 @@
     "uploadFile": "Upload File",
     "pasteKey": "Paste Key",
     "updateKey": "Update Key",
+    "existingKey": "Existing Key (click to change)",
+    "existingCredential": "Existing Credential (click to change)",
     "addTagsSpaceToAdd": "add tags (space to add)",
     "terminalBadge": "Terminal",
     "tunnelBadge": "Tunnel",
@@ -460,10 +474,18 @@
     "reconnect": "Reconnect",
     "sessionEnded": "Session Ended",
     "connectionLost": "Connection Lost",
-    "error": "ERROR",
+    "error": "ERROR: {{message}}",
     "disconnected": "Disconnected",
     "connectionClosed": "Connection closed",
-    "connectionError": "Connection error"
+    "connectionError": "Connection error: {{message}}",
+    "connected": "Connected",
+    "sshConnected": "SSH connection established",
+    "authError": "Authentication failed: {{message}}",
+    "unknownError": "Unknown error occurred",
+    "messageParseError": "Failed to parse server message",
+    "websocketError": "WebSocket connection error",
+    "reconnecting": "Reconnecting... ({{attempt}}/{{max}})",
+    "maxReconnectAttemptsReached": "Maximum reconnection attempts reached"
   },
   "fileManager": {
     "title": "File Manager",
@@ -483,6 +505,11 @@
     "clickToSelectFile": "Click to select a file",
     "chooseFile": "Choose File",
     "uploading": "Uploading...",
+    "uploadingFile": "Uploading {{name}}...",
+    "creatingFile": "Creating {{name}}...",
+    "creatingFolder": "Creating {{name}}...",
+    "deletingItem": "Deleting {{type}} {{name}}...",
+    "renamingItem": "Renaming {{type}} {{oldName}} to {{newName}}...",
     "createNewFile": "Create New File",
     "fileName": "File Name",
     "creating": "Creating...",
@@ -652,7 +679,10 @@
     "memoryUsage": "Memory Usage",
     "rootStorageSpace": "Root Storage Space",
     "of": "of",
-    "feedbackMessage": "Have ideas for what should come next for server management? Share them on"
+    "feedbackMessage": "Have ideas for what should come next for server management? Share them on",
+    "failedToFetchHostConfig": "Failed to fetch host configuration",
+    "failedToFetchStatus": "Failed to fetch server status",
+    "failedToFetchMetrics": "Failed to fetch server metrics"
   },
   "auth": {
     "loginTitle": "Login to Termix",
