--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -37,7 +37,7 @@
     "loadingCredentials": "正在加载凭据...",
     "retry": "重试",
     "noCredentials": "暂无凭据",
-    "noCredentialsMessage": "开始创建您的第一个SSH凭据",
+    "noCredentialsMessage": "你还没有添加任何凭证。点击“添加凭证”以开始。",
     "sshCredentials": "SSH凭据",
     "credentialsCount": "{{count}} 个凭据",
     "refresh": "刷新",
@@ -123,7 +123,14 @@
     "editCredentialDescription": "更新凭据信息",
     "listView": "列表",
     "folderView": "文件夹",
-    "unknown": "未知"
+    "unknown": "未知",
+    "confirmRemoveFromFolder": "确定要将\"{{name}}\"从文件夹\"{{folder}}\"中移除吗？凭据将被移动到\"未分类\"。",
+    "removedFromFolder": "凭据\"{{name}}\"已成功从文件夹中移除",
+    "failedToRemoveFromFolder": "从文件夹中移除凭据失败",
+    "folderRenamed": "文件夹\"{{oldName}}\"已成功重命名为\"{{newName}}\"",
+    "failedToRenameFolder": "重命名文件夹失败",
+    "movedToFolder": "凭据\"{{name}}\"已成功移动到\"{{folder}}\"",
+    "failedToMoveToFolder": "移动凭据到文件夹失败"
   },
   "sshTools": {
     "title": "SSH 工具",
@@ -339,6 +346,8 @@
     "importJsonDesc": "上传 JSON 文件以批量导入多个 SSH 主机（最多 100 个）。",
     "downloadSample": "下载示例",
     "formatGuide": "格式指南",
+    "exportCredentialWarning": "警告：主机 \"{{name}}\" 使用凭据认证。导出的文件将不包含凭据数据，导入后需要手动重新配置。您确定要继续吗？",
+    "exportSensitiveDataWarning": "警告：主机 \"{{name}}\" 包含敏感认证数据（密码/SSH密钥）。出于安全考虑，导出的文件将不包含此数据。导入后您需要重新配置认证。您确定要继续吗？",
     "uncategorized": "未分类",
     "confirmDelete": "确定要删除 \"{{name}}\" 吗？",
     "failedToDeleteHost": "删除主机失败",
@@ -433,6 +442,7 @@
     "selectCredential": "选择凭证",
     "selectCredentialPlaceholder": "选择一个凭证...",
     "credentialRequired": "使用凭证认证时需要选择凭证",
+    "credentialDescription": "选择凭证将覆盖当前用户名并使用凭证的认证详细信息。",
     "sshPrivateKey": "SSH 私钥",
     "keyPassword": "密钥密码",
     "keyType": "密钥类型",
@@ -466,6 +476,8 @@
     "uploadFile": "上传文件",
     "pasteKey": "粘贴密钥",
     "updateKey": "更新密钥",
+    "existingKey": "现有密钥（点击更改）",
+    "existingCredential": "现有凭据（点击更改）",
     "addTagsSpaceToAdd": "添加标签（空格添加）",
     "terminalBadge": "终端",
     "tunnelBadge": "隧道",
