Put user profle in its own tab, add code rabbit support

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -261,6 +261,7 @@
     "fileManager": "File Manager",
     "serverStats": "Server Stats",
     "admin": "Admin",
+    "userProfile": "User Profile",
     "tools": "Tools",
     "newTab": "New Tab",
     "splitScreen": "Split Screen",
