--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -260,6 +260,7 @@
     "fileManager": "文件管理器",
     "serverStats": "服务器统计",
     "admin": "管理员",
+    "userProfile": "用户资料",
     "tools": "工具",
     "newTab": "新标签页",
     "splitScreen": "分屏",
